--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,74 @@
-body {
+:root{
+  --theme_color: #E8762B;
+}
+
+@font-face {
+  font-family: 'TitleFont';
+  src: url('../public/fonts/sansation.light.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  background-color: #000000;
+  color: #ffffff;
+
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#title{
+  font-family: 'TitleFont';
+  font-size: 50px;
+  font-weight: lighter;
+  text-align: center;
+}
+#components_container{
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+}
+
+#search_bar_container{
+  display: flex;
+}
+#search_bar{
+  width: 585px;
+  height: 50px;
+  background-color: #D9D9D9;
+  opacity: 10%;
+}
+#search_button{
+  width: 78px;
+  height: 50px;
+  background-color: var(--theme_color);
+}
+
+#buttons_container{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+
+}
+
+.socmed_button{
+  width: 50px;
+  height: 50px;
+  background-color: var(--theme_color);
+  border-radius: 25px;
+}
+#home_button{
+  width: 200px;
+  height: 50px;
+  background-color: var(--theme_color);
+  border-radius: 5px;
 }
 
 code {
