--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 :root{
-  --theme_color: #E8762B;
+  --theme_color: #FFBADE;
+  --background_color: #201F31;
+  --dark_color: black;
+  --line-height: 1.25rem;
 }
 
 @font-face {
@@ -13,40 +16,55 @@ body{
   padding: 0;
   margin: 0;
 
-  background-color: #000000;
+  background-color: var(--background_color);
   color: #ffffff;
 
   width: 100vw;
   height: 100vh;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  overflow-x: hidden;
 
+  font-family: 'Poppins', sans-serif;
+}
+button{
+  all: unset
+}
+a{
+  all: unset;
+}
 #title{
+  margin: 0;
   font-family: 'TitleFont';
   font-size: 50px;
   font-weight: lighter;
-  text-align: center;
 }
 #components_container{
   display: flex;
   gap: 15px;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 #search_bar_container{
   display: flex;
 }
 #search_bar{
-  width: 585px;
+  all: unset;
+  color: #111111;
+  width: 563px;
   height: 50px;
-  background-color: #D9D9D9;
-  opacity: 10%;
+  background-color: #ffffff;
+  padding-left: 1rem;
 }
 #search_button{
-  width: 78px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 60px;
   height: 50px;
   background-color: var(--theme_color);
 }
@@ -63,15 +81,239 @@ body{
   height: 50px;
   background-color: var(--theme_color);
   border-radius: 25px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.socmed_button:nth-child(1) > a > div{
+  position: absolute;
+  top: 7px;
+  left: 7px;
+}
+.socmed_button:nth-child(2) > a > div{
+  position: absolute;
+  top: 7px;
+  left: 6px;
 }
 #home_button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  font-size: 1.1rem;
+
   width: 200px;
   height: 50px;
   background-color: var(--theme_color);
   border-radius: 5px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media only screen and (max-width: 721px) {
+  #search_bar{
+    width: 85vw;
+  }
+  #title{
+    font-size: 40px;
+  }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #161616;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #414141;
+}
+
+/* TOP BAR NAVIGATION STYLES */
+#top_bar_search_bar{
+  all: unset;
+
+  width: 360px;
+  height: 40px;
+  color: #111111;
+  background-color: #ffffff;
+  padding-left: 1rem;
+}
+
+
+/* HOME PAGE STYLES */
+#home_page_container{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: var(--line-height);
+}
+#top_navbar{
+  display: flex;
+  align-items: center;
+  background-color: var(--background_color);
+  width: 100vw;
+  height: 3.75rem;
+}
+
+#home_image_container{
+  width: 100vw;
+  height: 70vh;
+}
+.anime_images_item{
+  width: 100vw;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  box-shadow: 450px -5px 25px 40px var(--background_color) inset;
+  -webkit-box-shadow: 450px -5px 25px 40px var(--background_color) inset;
+  -moz-box-shadow: 450px -5px 25px 40px var(--background_color) inset;
+
+  display: none;
+}
+/* One Piece Anime Background Image */
+.anime_images_item:nth-child(1){
+  background-image: url(https://s4.anilist.co/file/anilistcdn/media/anime/banner/21-wf37VakJmZqs.jpg);
+}
+/* Naruto Anime Background Image */
+.anime_images_item:nth-child(2){
+  background-image: url(https://s4.anilist.co/file/anilistcdn/media/anime/banner/20-HHxhPj5JD13a.jpg);
+}
+/* Bleach Anime Background Image */
+.anime_images_item:nth-child(3){
+  background-image: url(https://s4.anilist.co/file/anilistcdn/media/anime/banner/269-08ar2HJOUAuL.jpg);
+}
+
+.anime_images_item > div{
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 50px
+}
+.anime_images_item > div > img{
+  width: 250px;
+}
+
+#anime_description{
+  display: -webkit-box;
+  overflow : hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;  
+}
+#watch_favorite_flexbox{
+  display: flex;
+  gap: 10px;
+}
+#anime_watch_button{
+  background-color: var(--theme_color);
+  width: 60%;
+  height: 40px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#anime_favorite_button{
+  background-color: var(--theme_color);
+  width: 10%;
+  height: 40px;
+}
+/* ANIME SLIDING CARD STYLES */
+#sliding_card_texts{
+  width: 100vw;
+  height: 4rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#sliding_card_texts > div{
+  width: 95%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#anime_sliding_cards_container{
+  display: flex;
+  gap: 20px;
+  padding: 6px 30px;
+
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.anime_sliding_card_items{
+  background-color: none;
+  display: inline-block;
+}
+.anime_sliding_card_info_container{
+  display: flex;
+  flex-direction: column;
+  /* gap: 5px;
+  margin: 5px; */
+}
+
+.anime_sliding_card_info:nth-child(1){
+  color: var(--theme_color);
+}
+.anime_sliding_card_info{
+  font-size: 14px;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 799px) {
+  #anime_description{
+    display: none;
+  }
+  .anime_images_item > div{
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:end;
+    align-items: center;
+    gap: 10px;
+    padding: 0px;
+  }
+  .anime_images_item{   
+    background-position: 50% 35%;
+    padding-bottom: 35px;
+
+    box-shadow: -1px -220px 30px -24px var(--background_color) inset;
+    -webkit-box-shadow: -1px -220px 30px -24px var(--background_color) inset;
+    -moz-box-shadow: -1px -220px 30px -24px var(--background_color) inset;
+  }
+  #anime_watch_button{
+    background-color: var(--theme_color);
+    width: 12rem;
+    height: 40px;    
+  }
+  #anime_favorite_button{
+    background-color: var(--theme_color);
+    width: 3rem;
+    height: 40px;
+  }
+}
+@media only screen and (max-width: 568px){
+  #anime_watch_button{
+    background-color: var(--theme_color);
+    width: 80vw;
+    height: 40px;    
+  }
+  #sliding_card_texts > div > h1{
+    font-size: 25px;
+  }
 }
